--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: deleteme1-service
+  name: app2-service
 spec:
   type: NodePort
   selector:
-    app: deleteme1
+    app: app2
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 3000
+    port: 8080
+    targetPort: 8080
