--- a/application.yaml
+++ b/application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: myapp2-argo-application
-  namespace: argocd
+  namespace: app2-ns
 spec:
   project: app2
 
